--- a/css/slyles.css
+++ b/css/slyles.css
@@ -19,10 +19,14 @@ body {
     letter-spacing: 0.03em;
 
 }
-
+h1,
+h2,
+h3,
+ul,
+p,
 ul {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     list-style-type: none;
 }
 .container {
@@ -76,14 +80,37 @@ ul {
 }
 /*--Секции--*/
 .section {
-    display: flex;
     padding-top: 94px;
     padding-bottom: 94px;
 }
-
+.header-container {
+        width: 1200px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: 15px;
+            padding-right: 15px;
+}
+.choice {
+    display: block;
+    text-align: center;
+}
 .choice {
     background-color: var(--color-choice);
+    margin-bottom: 30px;
+    margin-top: 200px;
 }
+.main-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+.item-list {
+    width: 270px;
+    margin-right: 30px;
+}
+.item-list:nth-child(4n){
+    margin-right: 0;
+}
+
 .header {
     font-weight: 900;
     font-size: 44px;
@@ -91,8 +118,19 @@ ul {
     color: var(--color-main);
     text-transform: uppercase;
     letter-spacing: 0.06em;
+    margin-bottom: 30px;
 }
-
+.img-box {
+    display: flex;
+    flex-wrap:wrap;
+}
+.img {
+    width: 370px;
+    margin-right: 30px;
+}
+.img:nth-child(3n) {
+    margin-right: 0;
+}
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -172,6 +210,10 @@ ul {
     line-height: 1.2;
     color: var(--header-list);
     letter-spacing: 0.03em;
+    display: block;
+    text-align: center;
+    margin-top: 94px;
+    margin-bottom: 50px;
 }
 .team {
         font-weight: 700;
@@ -232,7 +274,7 @@ ul {
     font-size: 16px;
     line-height: 1.8;
     letter-spacing: 0.06em;
-
+    margin-bottom: 200px;
 }
 .filter {
     color: var(--color-logo);
