--- a/css/slyles.css
+++ b/css/slyles.css
@@ -9,6 +9,11 @@
     --color-logo:#000000;
     --color-fotter-contact:rgba(255, 255, 255, 0.6);
     --color-button:#F5F4FA;
+    --cardset-gap: 30px;
+    --box-shadow:0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    --box-radius:0px 0px 4px 4px;
 }
 
 body {
@@ -29,6 +34,24 @@ ul {
     padding: 0px;
     list-style-type: none;
 }
+
+img {
+    display: block;
+    max-width: 100%;
+}
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
+
 .container {
     width: 1200px;
     margin-left: auto;
@@ -85,10 +108,10 @@ ul {
 }
 .header-container {
         width: 1200px;
-            margin-left: auto;
-            margin-right: auto;
-            padding-left: 15px;
-            padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 15px;
+        padding-right: 15px;
 }
 .choice-section {
     display: block;
@@ -132,34 +155,50 @@ ul {
     margin-right: 0;
 }
 
-.about-section {
-        padding-top: 94px;
-        padding-bottom: 94px;
-        }
 
-.team-container{
+.team-container {
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+
 }
 
 .title-team {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -30px;
+    margin-left: calc( -1 * var(--cardset-gap));
 }
 
  .title-team > .img-team {
-    outline: 1px solid teal;
-    flex-basis: calc(100%/4 - 30px);
-    margin-left: 30px;
+    flex-basis: calc(100%/4 - var(--cardset-gap));
+    margin-left: var(--cardset-gap);
     margin-top: 50px;
-    
+    background-color: #FFFFFF;
 }
+
+.card {
+    box-shadow: var(--box-shadow);
+    border-radius: var(--box-radius);
+}
+
 .team-section {
     padding-top: 94px;
     padding-bottom: 94px;
-        
+    background-color: var(--color-button);
+}
+.card-content {
+    padding-top: 30px;
+}
+.footer-container {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.logo-thumd {
+    padding-top: 60px;
+}
+.address-footer {
+    padding-top: 20px;
 }
 
 .logo {
@@ -243,8 +282,7 @@ ul {
     letter-spacing: 0.03em;
     display: block;
     text-align: center;
-    margin-top: 94px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 .team {
         font-weight: 700;
@@ -262,7 +300,6 @@ ul {
     line-height: 1.2;
     color: var(--header-list);
     letter-spacing: 0.03em;
-    padding-top: 30px;
 }
 .speciality {
     font-family: 'Roboto', sans-serif;
@@ -328,7 +365,7 @@ background-color: var(--color-blue);
 color: var(--fotter-list);
 background-color: var(--color-blue);
 }
-.fotter {
+.footer {
     color: var(--fotter-list);
     background-color: var(--color-footer);
 }
