--- a/css/slyles.css
+++ b/css/slyles.css
@@ -350,7 +350,7 @@ address {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
-    color: var(--heder-list);
+    color: var(--color-logo);
     letter-spacing: 0.06em;
     margin-bottom: 4px;
 }
